# wasmbots

./: .gitignore  .gitmodules  Dockerfile  README.md  _build_wasms.sh  _run_wasms.sh  build_and_run_wasms.sh  devbox.json  package-lock.json  package.json  report.sh  todo.md
art/: KennyDungeonTiles.tsj  light-mask-1x1-rot.aseprite  light-mask-1x1.aseprite  light-mask-3x3-rot.aseprite  light-mask-3x3.aseprite  light-mask-5x5-rot.aseprite  light-mask-5x5.aseprite  logo.afdesign  logos.afdesign  social.afdesign
bot_archive/: README.md
bot_as/: Makefile  asconfig.json  package-lock.json  package.json
bot_c/: Makefile  bot_c.c
bot_rs/: Cargo.toml  Makefile
bot_zig/: Makefile  build.zig  build.zig.zon
built_bots/: bot_as.wasm  bot_as.wat  bot_c.wasm  bot_c.wat  bot_rs.wasm  bot_rs.wat  bot_zig.wasm  bot_zig.wat
data/: guestExpectations.json
docs/: _index.md  bad_bots.md  bot_concepts.md  concepts.md  history.md  interface.md  introduction.md  libraries.md  moves and responses.md  notes.md  old_notes_from_2022.txt  playground.md  statuses.md  todo.md  trainer.md  trainers.md
engine/: package.json
example_bots/: .gitignore  bot_as.wasm  bot_as.wat  bot_c.wasm  bot_c.wat  bot_go.wasm  bot_go.wat  (+7 more)
example_bots_src/bot_rs/: Cargo.toml  Makefile
example_bots_src/bot_rs/src/: lib.rs
example_bots_src/circler/: .gitignore  Cargo.toml  Makefile  readme.md
example_bots_src/circler/examples/: trainer.rs
example_bots_src/circler/src/: exploration.rs  lib.rs
libraries/Rust/trainer/: Cargo.toml  build.rs
libraries/Rust/trainer/src/: harness.rs  lib.rs  main.rs
(+357 files in other folders)
