[package]
name = "bot_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true

[dependencies]
wasmbots_client = { path = "../../libraries/Rust", default-features = false}

[features]
default = ["bounds_checking"]
bounds_checking = ["wasmbots_client/bounds_checking"]
