[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
base64 = "0.22.1"
rand = "0.8.5"
